crates/data-dict/tests/snapshots/validate_spec__s08_units_on_non_quantity.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: races
    columns:
      - name: finish_rank
        type: number(ordinal)
        units: place
        range: [1, 100]
────────────────────────────────────────
error: [S08] A column with `units` must have type `number(quantity)`.
 --> dict.yaml:8:16
  |
4 |   - name: races
5 |     columns:
6 |       - name: finish_rank
7 |         type: number(ordinal)
8 |         units: place
  |                ^^^^^ has `units` but has type `number(ordinal)`
